# libqaul-ble

./: .gitignore  111.txt  README.md
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/libs/: blemodule-debug.aar  blemodule-release.aar
android/app/src/androidTest/java/com/bleqaul/qaul_tester/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/bleqaul/qaul_tester/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/bleqaul/qaul_tester/: ExampleUnitTest.kt
android/blemodule/: build.gradle
android/blemodule/src/main/java/qaul/sys/ble/: BleOuterClass.java
android/gradle/wrapper/: gradle-wrapper.properties
android/libqaul/: build.gradle
android/libqaul/src/main/java/net/qaul/libqaul/: libqaul.kt
kotlin/app/: build.gradle.kts
kotlin/app/src/main/java/net/: App.java
kotlin/app/src/main/kotlin/net/qaul/libqaul/: libqaul.kt
kotlin/app/src/test/java/net/: AppTest.java
pc/app/include/: net_qaul_libqaul_LibQaul.h
pc/app/java/net/qaul/ble/core/: BleWrapperClass.java
pc/app/java/net/qaul/libqaul/: LibQaul.java
pc/app/java/net/qaul/qaul/: MyApp.java
rust/libqaul/: Cargo.toml  build.rs
rust/libqaul/src/: lib.rs
rust/libqaul/src/api/: android.rs  mod.rs
rust/libqaul/src/rpc/: sys.rs
(+3 files in other folders)
