[package]
name = "libqaul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libqaul"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
jni = "0.19"

# special setting for android
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"